[package]
name = "wp-mini-epub-cli"
version = "0.2.4"
edition = "2024"
description = "A CLI tool to download WP Storeis into epubs."
authors = ["WattDownload <contact@wattdownload.com>"]
license = "AGPL-3.0-only"
documentation = "https://docs.rs/wp-mini-epub-cli"
homepage = "https://wprs.dev/crate-wp-mini-epub-cli"
repository = "https://github.com/WattDownload/crate-wp-mini-epub-cli"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "cookies"] }
wp-mini-epub = "0.8.2"
