[package]
name = "wp-mini-epub-cli"
version = "0.3.0-alpha.1"
edition = "2024"
description = "A CLI tool to download WP Storeis into epubs."
authors = ["WattDownload <contact@wattdownload.com>"]
license = "AGPL-3.0-only"
documentation = "https://docs.rs/wp-mini-epub-cli"
homepage = "https://wprs.dev/crate-wp-mini-epub-cli"
repository = "https://github.com/WattDownload/crate-wp-mini-epub-cli"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.43", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls", "cookies"] }
wp-mini-epub = "0.9.0-alpha.1"
wp-mini = "0.2.0-alpha.2"

[profile.release]
codegen-units = 1

[profile.lto-strip-release]
inherits = "release"
lto = true
strip = true