[package]
name = "wp-mini-epub-cli"
version = "0.3.0-alpha.2"
edition = "2024"
description = "A CLI tool to download WP Storeis into epubs."
authors = ["WattDownload <contact@wattdownload.com>"]
license = "AGPL-3.0-only"
documentation = "https://docs.rs/wp-mini-epub-cli"
homepage = "https://wprs.dev/crate-wp-mini-epub-cli"
repository = "https://github.com/WattDownload/crate-wp-mini-epub-cli"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "json", "cookies"] }
wp-mini-epub = "0.9.0-alpha.3"
wp-mini = "0.2.0-alpha.4"

[profile.release]
codegen-units = 1

[profile.lto-strip-release]
inherits = "release"
lto = true
strip = true
